# error_margin

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: on_push.yml
src/: calibration.rs  distributions.rs  lib.rs  margin.rs  math.rs  minimisation.rs  multi.rs  polyfit.rs  single.rs
tests/: calibration.rs
