[package]
name = "error_margin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "estimate margin of error in real-time sensing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }

[dev-dependencies]
approx = "0.5"
itertools = "0.11"
ndarray-rand = "0.14"
proptest = "1"
rand_isaac = "0.3"
