[package]
name = "error_margin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "estimate margin of error in real-time sensing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
itertools = "0.11"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
approx = "0.5"
ndarray-rand = "0.14"
proptest = "1"
rand_isaac = "0.3"
tempdir = "0.3"
