[package]
name = "error_margin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "estimate margin of error in real-time sensing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

argmin = { version = "0.8.1", features = ["_ndarrayl"] }
csv = "1"
itertools = "0.11"
ndarray-linalg = { version = "0.16" }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
approx = "0.5"
ndarray-rand = "0.14"
proptest = "1"
rand_isaac = "0.3"
tempdir = "0.3"
